# adaptio-main

./: .clang-format  .gitignore  .gitlab-ci.yml  ABW.csv  BIGSNAKE_TESTS_SUMMARY.md  BLOCK_TESTS_ERROR_RESOLUTION.md  CALIBRATION_V2_SYSTEM_CHANGES.md  CODEOWNERS  MANAGEMENT_SERVER_ERROR_RESOLUTION.md  MIGRATION_SUMMARY.md  README.md  adaptio.sh  fix-opencv.patch  flake.nix  run-adaptio.sh  source.tgz
src/: CMakeLists.txt  DOCS.md  main.cc
src/block_tests/: CMakeLists.txt  abp_parameters_test.cc  adaptive_welding_test.cc  basic_abp_welding_test.cc  calibration_test.cc  calibration_v2_test.cc  coordinate_systems_test.cc  coordination_test.cc  helpers.cc  helpers.h  helpers_abp_parameters.h  helpers_calibration.h  helpers_calibration_v2.h  helpers_event_handling.h  helpers_joint_geometry.h  helpers_kinematics.h  helpers_settings.h  helpers_simulator.h  helpers_web_hmi.h  helpers_weld_control.h  helpers_weld_data_set.h  helpers_weld_process_parameters.h  helpers_weld_program.h  helpers_weld_system.h  joint_tracking_test.cc  metrics_test.cc  ready_state_test.cc  scanner_test.cc  sequence.md  settings_test.cc  shutdown_test.cc  weld_control_test.cc  weld_data_set_test.cc  weld_process_parameters_test.cc  weld_program_test.cc
src/block_tests/configs/: misaligned_joint_configuration.yaml  wide_joint_configuration.yaml
src/block_tests/mocks/: config_manager_mock.h
src/common/: CMakeLists.txt
src/common/containers/: position_buffer.h  relative_position_buffer.h  slot_buffer.h
src/common/deposition_simulator/: point3d.h  sim-config.h  simulator_interface.h
src/common/groove/: CMakeLists.txt  groove.h  math.h  point.h
src/common/logging/: component_logger.cc
src/common/math/: centroids.h  filter.h  lin_interp.cc
src/common/messages/: CMakeLists.txt  kinematics.h  management.h  scanner.h  weld_system.h
src/common/storage/: CMakeLists.txt  multi_storage.h  slot_buffer_storage.h  sql_multi_storage.h
src/common/types/: vector_3d_helpers.h
src/common/zevs/: zevs_core.h  zevs_test_support.h
src/configuration/: CMakeLists.txt  DOCS.md  calib_fix_joint_geometry_converter.h  calibration_converter.h  circ_weld_object_calib_converter.cc  circ_weld_object_calib_converter.h  config_manager.cc  config_manager.h  config_manager_impl.cc  config_manager_impl.h  configuration_error.cc  configuration_error.h  controller_config_converter.h  converter.h  factory.cc  image_logging_converter.h  image_provider_converter.h  laser_torch_calib_converter.cc  laser_torch_calib_converter.h  scanner_calibration_converter.cc  scanner_calibration_converter.h  scanner_converter.h  tolerances_converter.h  weld_control_converter.h
src/configuration/test/: CMakeLists.txt  test_calib_fix_joint_geometry.cc  test_circ_weld_object_calib_converter.cc  test_config_manager.cc  test_controller_converter.cc  test_image_provider_converter.cc  test_laser_torch_calib_converter.cc  test_scanner_calibration_converter.cc  test_scanner_converter.cc  test_tolerances_converter.cc
src/controller/: CMakeLists.txt  axis_output_plc_adapter.cc  axis_output_plc_adapter.h  controller.h.jinja2  controller_configuration.h  controller_data.h.jinja2  controller_factory.cc  controller_messenger.cc  controller_messenger.h  kinematics_server.h  kinematics_server_impl.cc  kinematics_server_impl.h  management_client.cc  management_client.h  slide_position_buffer.cc  weld_system_server.h  weld_system_server_impl.cc  weld_system_server_impl.h
src/controller/pn_driver/: CMakeLists.txt  pn_driver.cc  pn_driver.h
src/controller/simulation/: power_source.cc  simulation.cc  simulation.h
src/controller/systems/: CMakeLists.txt  system.h
src/controller/tests/: CMakeLists.txt  axis_output_plc_adapter_test.cc  controller_test.cc
src/main/: CMakeLists.txt  application.cc  application.h  slice_translator.tar
src/main/bead_control/: CMakeLists.txt  bead_control.h  bead_control_types.h
src/main/calibration/: CMakeLists.txt  calibration_manager.h  calibration_manager_impl.cc  calibration_manager_impl.h  calibration_metrics.cc  calibration_types.h
src/main/cli_handler/: CMakeLists.txt  json_payload.h  log_level_cli.cc
src/main/coordination/: activity_status.h  calibration_status.h
src/main/joint_geometry/: joint_geometry.h  joint_geometry_provider.h
src/main/kinematics/: CMakeLists.txt  kinematics_client.h  kinematics_client_impl.cc  kinematics_client_impl.h
src/main/lpcs/: lpcs_slice.h
src/main/macs/: CMakeLists.txt  macs_groove.h  macs_math.h  macs_point.h  macs_slice.h
src/main/management/: CMakeLists.txt  management_server.cc  management_server.h
src/main/scanner_client/: CMakeLists.txt  scanner_client.h  scanner_client_impl.cc  scanner_client_impl.h
src/main/slice_translator/: CMakeLists.txt  DOCS.md  coordinates_translator.cc  coordinates_translator.h  model_config.h  model_extract.h  slice_observer.h  slice_translator.h  slice_translator_impl.cc  slice_translator_impl.h  slice_translator_service.h  slice_translator_service_v2.h
src/main/tracking/: tracking_manager.h
src/main/web_hmi/: DOCS.md  example_messages.txt  web_hmi.h  web_hmi_json_helpers.h
src/main/weld_control/: CMakeLists.txt  weld_control.h  weld_control_types.h
src/main/weld_system_client/: weld_system_client.h  weld_system_types.h
src/scanner/: CMakeLists.txt  scanner.h  scanner_application.cc  scanner_application.h  scanner_calibration_configuration.h  scanner_factory.h  scanner_factory_impl.cc  scanner_factory_impl.h  scanner_impl.cc  scanner_impl.h  scanner_server.cc  scanner_server.h
src/scanner/image/: CMakeLists.txt  camera_model.h  image.cc  image.h  image_data.cc  image_data.h  tiff_handler_impl.cc  tiff_handler_impl.h  tilted_perspective_camera.cc  tilted_perspective_camera.h
src/scanner/image_logger/: CMakeLists.txt  image_logger_impl.cc
src/scanner/image_provider/: CMakeLists.txt  basler_camera.cc  basler_camera.h  image_provider.h  image_provider_configuration.h
src/scanner/joint_buffer/: CMakeLists.txt  circular_joint_buffer.cc  circular_joint_buffer.h  joint_buffer.h  (+2 more)
src/test_utils/: expected_abw_loader.h
(+215 files in other folders)
